# ChiffrementMultimedia

./: .gitignore  README.md
Code_TP1_ChiffrementMultimedia_DupratThomas/: CMakeLists.txt
Code_TP1_ChiffrementMultimedia_DupratThomas/Results/decoding_Casimir_noised_ECB/: Casimir_noised_ECB_out.pnm
Code_TP1_ChiffrementMultimedia_DupratThomas/Results/encryption_Casimir/: Casimir_traitement_applique.txt
Code_TP1_ChiffrementMultimedia_DupratThomas/Results/encryption_Casimir_0/: Casimir_traitement_applique.txt
Code_TP1_ChiffrementMultimedia_DupratThomas/Results/encryption_Casimir_F0/: F0.pnm
Code_TP1_ChiffrementMultimedia_DupratThomas/Results/encryption_Chat/: Chat.txt  Chat_traitement_applique.txt
Code_TP1_ChiffrementMultimedia_DupratThomas/Results/encryption_Garfield/: Garfield_out.pnm
Code_TP1_ChiffrementMultimedia_DupratThomas/Results/interesting/: snake_out_0.pgm  snake_out_1.pgm
Code_TP1_ChiffrementMultimedia_DupratThomas/Sources/: 0F.pgm  10_chiffre.pgm  14_chiffre.pgm  secret_encrypted.pgm  snake_grey.pgm
Code_TP1_ChiffrementMultimedia_DupratThomas/src/: Image.h  Pixel.h  TP4.cpp
TP1_Chiffrement/Results/decoding_Casimir_noised_ECB/: Casimir_noised_ECB_traitement_applique.txt
TP1_Chiffrement/Results/decoding_Inconnue/: Inconnue.pnm  Inconnue_traitement_applique.txt
TP1_Chiffrement/Results/encryption_Casimir_0/: Casimir_out_0.pnm
TP1_Chiffrement/Results/encryption_Casimir_F/: Casimir_out_F.pnm  (+1 more)
TP1_Chiffrement/Sources/: snake.ppm
TP1_Chiffrement/src/: image_ppm.h
TP2/Code_TP2_ChiffrementMultimedia_DupratThomas/: CMakeLists.txt
(+11 files in other folders)
